# Selectra

./: .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/clients/: __init__.py  groq_client.py  openai_client.py  search_client.py
backend/app/core/: __init__.py  config.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  analyze_service.py
backend/tests/: test_main.py
extension/: README.md  content_script.js  popup.html  result.html
frontend/: README.md  background.js  content_script.js  dev_tester.html  manifest.json  popup.html  result.html
