[tool.poetry]
name = "ai_extension_backend"
version = "0.1.0"
description = "Backend API for AI-anchored browser extension"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
httpx = "^0.24.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
